<resources>
    <string name="app_name">Here</string>
    <string name="msg_default_status">镜头范围内进行扫描。  </string>
    <string name="activity_sample_code">开心网接口Demo</string>
    <string name="title_getuserinfo">获取我的用户信息</string>
    <string name="title_postrecord">发表记录</string>
    <string name="tv_nouserinfo">返回的用户信息为空</string>
    <string name="title_getfriendlist">获取开心网好友列表</string>
    <string name="tv_nofriend">返回的好友列表为空</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="online">在线</string>
    <string name="offline">不在线</string>
    <string name="downloading">正在下载...</string>
    <string name="uploading">正在上传...</string>
    <string name="post_record_empty_content">请输入内容</string>
    <string name="post_record_success">开心网记录发表成功</string>
    <string name="post_record_fail">记录发表失败...</string>
    <string name="loading_photo">正在加载图片...</string>
    <string name="getting_logged_in_user">正在获取用户UID...</string>
    <string name="task_failed">请求的任务失败</string>
    <string name="task_failed_arg_err">传入的参数错误，请检查代码</string>
    <string name="task_failed_network_err">网络错误，请重试</string>
    <string name="task_cancel_auth_success">取消授权成功</string>
    <string name="task_failed_class_cast_err">Java换型错误，请检查代码</string>
    <string name="task_failed_json_parse_err">JSON解析错误，请检查代码</string>
    <string name="task_failed_malformed_url_err">错误的 URL,请检查请求的URL</string>
    <string name="task_failed_encoder_err">字符串转换失败，请检查代码</string>
    <string name="json_upload_photo_result">返回结果(JSON格式)</string>
    <string name="setting_picture">显示图片</string>
    <string name="setting_picture_desc">下载并显示头像和微博图片</string>
    <string name="setting_pic_size">图片大小</string>
    <string name="setting_pic_size_desc">微博图片大小，小图可以节省流量</string>
    <string name="setting_autocheck">自动检测</string>
    <string name="setting_autocheck_desc">自动检测新微博、评论和私信</string>
    <string name="setting_vibrator">震动提醒</string>
    <string name="setting_vibrator_desc">检测到新消息时，震动提醒</string>
    <string name="setting_interval">检测间隔</string>
    <string name="setting_interval_desc">自动检测新微博的间隔时间，间隔长省流量</string>
    <string name="setting_autoload_more">自动加载“更多”</string>
    <string name="setting_autoload_more_desc">到达列表底部时自动加载“更多”微博</string>
    <string name="setting_title">提示</string>
    <string name="setting_need_clear_cache">您需要清除缓存吗？</string>
    <string name="setting_doing">处理中</string>
    <string name="setting_success_clear">删除成功</string>
    <string name="setting_title_auto_remind">自动提醒</string>
    <string name="setting_summary_off_auto_remind">关闭自动提醒</string>
    <string name="setting_summary_on_auto_remind">启用自动提醒</string>
    <string name="setting_title_auto_remind_setting">自动提醒设置</string>
    <string name="setting_summary_off_vibrator">关闭震动提醒</string>
    <string name="setting_summary_on_vibrator">启用震动提醒</string>
    <string name="setting_summary_off_audio">关闭铃声提醒</string>
    <string name="setting_summary_on_audio">启用铃声提醒</string>
    <string name="setting_title_audio">铃声提醒</string>
    <string name="setting_title_generic_setting">通用设置</string>
    <string name="setting_synchronous_data">是否同步本地数据</string>
    <string name="setting_synchronous_data_desc">是否需要将用户的会员卡，优惠券等数据保存到本地以便断网时也能使用</string>
    <string name="setting_save_userinfo">是否需要自动登录</string>
    <string name="setting_save_userinfo_desc">是否需要在登录一次后，下次系统将自动登录</string>
    <string name="setting_ip_address">选择后台服务器地址</string>
    <string name="setting_ip_address_desc">选择一个连接后台服务器的地址</string>
    <string name="setting_key_switch_language">switch_language</string>
    <string name="setting_title_language">语言</string>
    <string name="setting_summary_language">切换语言</string>
    <string name="setting_title_upload">上传图片设置</string>
    <string name="setting_summary_upload">调整上传图片的质量</string>
    <string name="setting_title_doownload">下载图片设置</string>
    <string name="setting_summary_doownload">调整下载图片的质量</string>
    <string name="setting_loadimg">是否下载网络图片</string>
    <string name="setting_loadimg_desc">当有些界面加载时，是否需要下载服务器端图片</string>
    <string name="setting_fast_scroll_bar">开启快速拖动</string>
    <string name="setting_fast_scroll_bar_desc">浏览列表时可使用拖动条快速拖动</string>
    <string name="language_value_auto">auto</string>
    <string name="preferences_clear_cache_title">清除缓存</string>
    <string name="preferences_clear_cache_summary">清除缓存:包括用户信息、图片等。</string>
    <string name="pref_setting_notify">提醒设置</string>
    <string name="pref_setting_notify_summary">可定制项包括:优惠券、私信、@我、评论</string>
    <string name="itemmenu_reload_picture">刷新图片</string>
    <string name="itemmenu_reload_portrait">刷新头像</string>
    <string name="itemmenu_back">收起</string>
    <string name="itemmenu_forward">转发</string>
    <string name="itemmenu_comment">评论</string>
    <string name="itemmenu_reply_comment">回复评论</string>
    <string name="itemmenu_reply_message">回复私信</string>
    <string name="itemmenu_delete">删除</string>
    <string name="itemmenu_delete_mblog">删除微博</string>
    <string name="itemmenu_bookmark">收藏</string>
    <string name="itemmenu_bookmark_del">取消收藏</string>
    <string name="itemmenu_userinfo">查看个人资料</string>
    <string name="itemmenu_info">查看个人资料</string>
    <string name="itemmenu_ori_pic">查看原图</string>
    <string name="itemmenu_ori_mblog">查看原微博</string>
    <string name="entries_interval_1">0.5分钟</string>
    <string name="entries_interval_3">2分钟</string>
    <string name="entries_interval_4">5分钟</string>
    <string name="image_size_large">高</string>
    <string name="image_size_middle">中</string>
    <string name="image_size_low">低</string>
    <string name="language_auto">自动</string>
    <string name="language_value_en">en</string>
    <string name="language_value_zh">zh_CN</string>
    <string name="language_value_zh_tw">zh_TW</string>
    <string name="language_en">English</string>
    <string name="language_zh">简体中文</string>
    <string name="language_zh_tw">繁體中文</string>
    <string name="entries_download_image_large">高</string>
    <string name="entries_download_image_small">低</string>
    <string name="login_lable_1">没账号？</string>
    <string name="login_lable_2">免费快速注册</string>
    <string name="login_lable_3">欢迎</string>
    <string name="login_lable_4">登录成功！</string>
    <string name="login_lable_5">登录失败！</string>
    <string name="login_lable_6">登录失败！可能的登录名密码不正确</string>
    <string name="login_lable_7">登录失败！由于你的网络不通或IP地址不对</string>
    <string name="login_lable_8">用户名不能为空！</string>
    <string name="login_lable_9">Email不能为空！</string>
    <string name="login_lable_10">密码不能为空！</string>
    <string name="login_lable_11">确认密码不能为空！</string>
    <string name="login_lable_12">密码与确认密码不一致！</string>
    <string name="login_lable_13">请选择我已阅读并同意！</string>
    <string name="login_lable_14">注册成功！</string>
    <string name="login_lable_15">注册失败！</string>
    <string name="login_lable_16">系统配置</string>
    <string name="login_lable_17">无法获取地理信息</string>
    <string name="login_lable_18">本地图片库</string>
    <string name="login_lable_19">相机拍摄</string>
    <string name="login_lable_20">图片选择</string>
    <string name="login_lable_21">正在处理数据请稍等...</string>
    <string name="record_upload_session">录音文件上传成功！</string>
    <string name="record_upload_error">录音文件上传失败！</string>
    <string name="record_download_session">录音文件下载成功！</string>
    <string name="record_download_error">录音文件下载失败！</string>
    <string name="image_menu_lable">图片菜单</string>
    <string name="image_view_lable">查看图片</string>
    <string name="image_replace_lable">替换图片</string>
    <string name="phone_screen_label">拍摄照片</string>
    <string name="image_dellent_lable">删除图片</string>
    <string name="start_record_lable">开始录音</string>
    <string name="play_record_lable">播放录音</string>
    <string name="manage_record_lable">录音管理</string>
    <string name="record_winn_lable">SD不存在，不正常录音！</string>
    <string name="record_lable_1">正在录音...</string>
    <string name="record_lable_2">提示</string>
    <string name="record_lable_3">停止</string>
    <string name="record_lable_4">已经停止录音.</string>
    <string name="record_lable_5">录音播放完毕.</string>
    <string name="record_lable_6">正在播放录音...</string>
    <string name="image_sizeerroe_lable">图片过大请重新上传</string>
    <string name="send_msg_session_lable">发送成功</string>
    <string name="send_msg_error_lable">发送失败</string>
    <string name="mybill_details_lable_1">消费总额：</string>
    <string name="mybill_details_lable_2">消费编号:</string>
    <string name="mybill_details_lable_3">消费时间:</string>
    <string name="mybill_list_lable_1">搜索</string>
    <string name="mybill_list_lable_2">已确认收货</string>
    <string name="mybill_list_lable_3">你有产品还没评论，添加评论可以获取积分！</string>
    <string name="mybill_list_lable_4">你的评论已经发布成功</string>
    <string name="mybill_list_lable_5">你的评论发布失败，请重新尝试</string>
    <string name="mybill_list_lable_6">单价：</string>
    <string name="mybill_list_lable_7">总价：</string>
    <string name="mybill_list_lable_8">数量：</string>
    <string name="mybill_list_lable_9">开始时间</string>
    <string name="mybill_list_lable_10">结束时间</string>
    <string name="mybill_list_lable_11">开始时间不能大于结束时间</string>
    <string name="mybill_list_lable_12">结束时间不能小于开始时间</string>
    <string name="coupon_lable_1">优惠截止：</string>
    <string name="coupon_lable_2">限量</string>
    <string name="coupon_lable_3">张</string>
    <string name="coupon_lable_4">下载优惠券</string>
    <string name="coupon_lable_5">优惠券已经下载成功！</string>
    <string name="coupon_lable_6">优惠券下载失败！</string>
    <string name="coupon_lable_7">申请加入会员</string>
    <string name="coupon_lable_8">使用优惠券</string>
    <string name="coupon_lable_9">使用优惠券时发生错误，请重新尝试！</string>
    <string name="coupon_lable_10">该优惠券已经使用过，不可再使用！</string>
    <string name="coupon_lable_11">我觉得这个优惠券不错，想和大家分享一下</string>
    <string name="coupon_lable_12">的优惠券。</string>
    <string name="coupon_lable_13">优惠券分享</string>
    <string name="coupon_lable_14">确定</string>
    <string name="coupon_lable_15">您目前没有SD卡暂不能分享</string>
    <string name="coupon_lable_16">取消</string>
    <string name="coupon_lable_17">新浪微博分享成功！</string>
    <string name="coupon_lable_18">新浪微博分享失败！</string>
    <string name="coupon_lable_19">人人网分享成功！</string>
    <string name="coupon_lable_20">人人网分享失败！</string>
    <string name="coupon_lable_21">腾讯微博分享成功！</string>
    <string name="coupon_lable_22">腾讯微博分享失败！</string>
    <string name="coupon_lable_23">开心网分享成功！</string>
    <string name="coupon_lable_24">开心网分享失败！</string>
    <string name="coupon_lable_25">成功加入该店会员</string>
    <string name="coupon_lable_26">加入失败 !</string>
    <string name="coupon_lable_27">我的优惠券</string>
    <string name="coupon_lable_28">确定要退出当前页面吗？一旦推出该优惠券就不能再使用了！</string>
    <string name="hotel_reservation_lable_1">入住时间</string>
    <string name="hotel_reservation_lable_2">离店时间</string>
    <string name="hotel_reservation_lable_3">返现</string>
    <string name="map_lable_10">全部</string>
    <string name="weibo_lable_1">新浪微博授权</string>
    <string name="menu_lable_24">产品分类</string>
    <string name="menu_lable_25">新品排序</string>
    <string name="menu_lable_26">销量从高到低</string>
    <string name="menu_lable_27">价格从低到高</string>
    <string name="menu_lable_29">暂无商品</string>
    <string name="menu_lable_166">2公里</string>
    <string name="menu_lable_167">5公里</string>
    <string name="menu_lable_168">15公里</string>
    <string name="cancel_info">返回</string>
    <string name="login_info">登录</string>
    <string name="vip_creates6">注册</string>
    <string name="weibo_loginname">用户名</string>
    <string name="weibo_loginpwd">密码</string>
    <string name="weibo_loginagree">同意</string>
    <string name="hotel_label_94">验证申请</string>
    <string name="hotel_label_95">你需要发送验证请求，并在对方通过后才能成为朋友。</string>
    <string name="hotel_label_127">您目前还没有登录，是否现在登录或者注册？</string>
    <string name="hotel_label_148">软件版本更新</string>
    <string name="hotel_label_149">有新的版本,是否现在下载安装</string>
    <string name="hotel_label_150">下载</string>
    <string name="sns_has_liked">取消</string>
</resources>