<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/confirm_dialog_bg2"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:text="@string/setting_title"
        android:textColor="#333"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/hotel_label_127"
        android:textColor="#333"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="53dp" >

        <Button
            android:id="@+id/exitBtn0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_style_green"
            android:gravity="center"
            android:onClick="exitbutton0"
            android:text="@string/login_info"
            android:textColor="#fff"
            android:layout_marginLeft="10dip"
            android:textSize="16sp" />
        
        <Button
            android:id="@+id/exitBtn2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:onClick="exitbutton2"
            android:text="@string/vip_creates6"
            android:layout_marginRight="10dip"
            android:textColor="#333"
            android:textSize="16sp" />

        <!-- <Button
            android:id="@+id/exitBtn1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:onClick="exitbutton1"
            android:text="@string/sns_has_liked"
            android:textColor="#333"
            android:textSize="16sp" /> -->
    </LinearLayout>

</LinearLayout>