<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/home_backgroud" >

    <RelativeLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:layout_gravity="top"
        android:background="@drawable/logo_bg"
        android:gravity="center_vertical"
        android:paddingLeft="8.0dip"
        android:paddingRight="8.0dip" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#75000000"
                android:shadowDy="2.0"
                android:shadowRadius="2.0"
                android:text="@string/menu_lable_24"
                android:textColor="#ffffffff"
                android:textSize="20.0sp" />
        </FrameLayout>

        <Button
            android:id="@+id/back_btn"
            android:layout_width="40.0dip"
            android:layout_height="30.0dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_back"
            android:gravity="center"
            android:paddingBottom="2.0dip"
            android:paddingLeft="3.0dip"
            android:paddingRight="3.0dip"
            android:paddingTop="2.0dip"
            android:scaleType="fitXY"
            android:text="@string/cancel_info"
            android:textColor="#ffffffff"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linRank"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout01"
        android:background="@drawable/segment_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textRankNew"
            style="@style/style_13_FFFFFF_BOLD"
            android:layout_width="100.0dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6.0dip"
            android:layout_marginTop="6.0dip"
            android:background="@drawable/segment_selected_1_bg"
            android:gravity="center"
            android:paddingBottom="5.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/menu_lable_25" />

        <TextView
            android:id="@+id/textRankSale"
            style="@style/style_13_4B4B4B_BOLD"
            android:layout_width="100.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/segment_normal_2_bg"
            android:gravity="center"
            android:paddingBottom="5.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/menu_lable_26" />

        <TextView
            android:id="@+id/textRankPrice"
            style="@style/style_13_4B4B4B_BOLD"
            android:layout_width="100.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/segment_normal_3_bg"
            android:gravity="center"
            android:paddingBottom="5.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/menu_lable_27" />
    </LinearLayout>

    <ListView
        android:id="@+id/listProduct"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linRank"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/listview_item_line"
        android:listSelector="@anim/index_item_bg"
        android:visibility="gone" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/listProduct"
        android:src="@drawable/listview_item_line" />

    <TextView
        android:id="@+id/textNull"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/menu_lable_29"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ProgressBar
            android:id="@+id/probar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/my_progressbar_bg_color" />
    </RelativeLayout>

</RelativeLayout>